Project

General

Profile

Actions

Bug #21773

closed

restarting active ceph-mgr cause glitches in bps and iops metrics

Added by Aleksei Gutikov over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Category:
ceph-mgr
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

after doing restart of active ceph-mgr:

$ sudo systemctl restart ceph-mgr.target

I see next in output of

$ while true; do ceph -s -f json-pretty | grep _sec; sleep 2; echo "-------"; done

-------
        "read_bytes_sec": 173722797,
        "write_bytes_sec": 166612902,
        "read_op_per_sec": 900,
        "write_op_per_sec": 873
-------
        "read_bytes_sec": 173722797,
        "write_bytes_sec": 166612902,
        "read_op_per_sec": 900,
        "write_op_per_sec": 873
-------
        "recovering_objects_per_sec": 0,
        "recovering_bytes_per_sec": 31,
        "recovering_keys_per_sec": 0,
        "read_bytes_sec": 29253,
        "write_bytes_sec": 32108,
        "read_op_per_sec": 0,
        "write_op_per_sec": 0
-------
        "recovering_objects_per_sec": 0,
        "recovering_bytes_per_sec": 31,
        "recovering_keys_per_sec": 0,
        "read_bytes_sec": 29253,
        "write_bytes_sec": 32108,
        "read_op_per_sec": 0,
        "write_op_per_sec": 0
-------
        "recovering_objects_per_sec": 0,
        "recovering_bytes_per_sec": 31,
        "recovering_keys_per_sec": 0,
        "read_bytes_sec": 29254,
        "write_bytes_sec": 32109,
        "read_op_per_sec": 0,
        "write_op_per_sec": 0
-------
        "recovering_objects_per_sec": 5353,
        "recovering_bytes_per_sec": 4155022666,
        "recovering_keys_per_sec": 1331418,
        "read_bytes_sec": 3870227702151,
        "write_bytes_sec": 4247825242313,
        "read_op_per_sec": 41162700,
        "write_op_per_sec": 47643286
-------
        "read_bytes_sec": 238234419,
        "write_bytes_sec": 189319437,
        "read_op_per_sec": 1088,
        "write_op_per_sec": 999
-------
        "read_bytes_sec": 224943025,
        "write_bytes_sec": 178757071,
        "read_op_per_sec": 1027,
        "write_op_per_sec": 943
-------
        "read_bytes_sec": 332159124,
        "write_bytes_sec": 242140371,
        "read_op_per_sec": 1428,
        "write_op_per_sec": 1330

Related issues 1 (0 open1 closed)

Copied to mgr - Backport #22029: luminous: restarting active ceph-mgr cause glitches in bps and iops metricsResolvedShinobu KinjoActions
Actions #2

Updated by Kefu Chai over 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Aleksei Gutikov
Actions #4

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to luminous
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22029: luminous: restarting active ceph-mgr cause glitches in bps and iops metrics added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF